--- a/PlantPlaces/WebContent/index.html
+++ b/PlantPlaces/WebContent/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <h1>
-	Welcome to PlantPlaces.com!
+	Welcome to CisteciMedvjedici.com!
+	Odlična prilika da očistiš šumu i da se udvaraš usidjelicama.
 </h1>
 
 </body>
